# homew.OOP

./: .coverage  .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_models_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_test_models_py.html
src/: main.py  models.py
tests/: test_models.py
